# gphoto2-rs-rest

./: Cargo.toml
src/: camera.rs  capture_control.rs  capture_store.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  state.rs
tests/: api_integration.rs  hardware_d5300.rs
