[package]
name = "nikon_bulb_server"
version = "0.1.0"
edition = "2021"

[dependencies]
gphoto2 = "3.4.1"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "timeout", "cors"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
async-trait = "0.1"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
